--- a/admin/build_targets/centos7/Dockerfile
+++ b/admin/build_targets/centos7/Dockerfile
@@ -1,13 +1,7 @@
 # Copyright Hybrid Logic Ltd. See LICENSE file for details.
 #
-# A Docker image for running the ``admin/build-package`` script in a clean
-# Centos 7 build environment.
+# A Docker image for building RPMs in a clean Centos 7 build environment.
 #
-# Build:
-# docker build --tag='clusterhq/build_centos:7' ~/projects/flocker/admin/build_targets/centos7
-#
-# Run:
-# docker run --volume=~/projects/flocker:/flocker clusterhq/build_centos:7 https://storage.googleapis.com/archive.clusterhq.com/downloads/flocker/Flocker-0.2.1-py2-none-any.whl
 
 FROM centos
 MAINTAINER Richard Wall <richard.wall@clusterhq.com>
