use official fedora20 base image for builds

--- a/admin/build_targets/fedora20/Dockerfile
+++ b/admin/build_targets/fedora20/Dockerfile
@@ -3,7 +3,7 @@
 # A Docker image for building RPMs in a clean Fedora 20 build environment.
 #
 
-FROM mattdm/fedora-small:f20
+FROM fedora:20
 MAINTAINER Richard Wall <richard.wall@clusterhq.com>
 RUN ["curl", "--output", "/etc/yum.repos.d/hybridlogic.repo", "https://copr.fedoraproject.org/coprs/tomprince/hybridlogic/repo/fedora-20-x86_64/tomprince-hybridlogic-fedora-20-x86_64.repo"]
 RUN ["yum", "install", "--assumeyes", "@buildsys-build", "git", "python-twisted", "python-characteristic", "python-virtualenv", "ruby-devel"]
