Use the virtualenv/pip from centos/epel.

--- a/admin/build_targets/centos-7/Dockerfile
+++ b/admin/build_targets/centos-7/Dockerfile
@@ -6,16 +6,13 @@
 FROM centos:centos7
 MAINTAINER ClusterHQ <contact@clusterhq.com>
 RUN ["yum", "groupinstall", "--assumeyes", "Development Tools"]
-RUN ["yum", "install", "--assumeyes", "git", "ruby-devel", "python-devel"]
+RUN ["yum", "install", "--assumeyes", "epel-release"]
+RUN ["yum", "install", "--assumeyes", "git", "ruby-devel", "python-devel", "python-virtualenv", "python-pip"]
 # Despite being a packaging tool, fpm isn't yet packaged for Fedora.
 # See https://github.com/jordansissel/fpm/issues/611
 RUN ["gem", "install", "fpm"]
 WORKDIR /tmp
-RUN ["curl", "--output", "get-pip.py", "https://raw.githubusercontent.com/pypa/pip/master/contrib/get-pip.py"]
-RUN ["python", "get-pip.py"]
-# The Centos7 packaged virtualenv --relocatable seems to remove the `flocker-*` scripts.
-# Install it from PyPI instead.
-RUN ["pip", "install", "twisted", "characteristic", "virtualenv"]
+RUN ["pip", "install", "twisted", "characteristic"]
 VOLUME /flocker
 WORKDIR /
 ENTRYPOINT ["/flocker/admin/build-package-entrypoint", "--destination-path=/output"]
