--- a/admin/build_targets/centos-7/Dockerfile
+++ b/admin/build_targets/centos-7/Dockerfile
@@ -1,18 +1,19 @@
 # Copyright Hybrid Logic Ltd. See LICENSE file for details.
 #
-# A Docker image for building RPMs in a clean Centos 7 build environment.
+# A Docker image for building RPMs in a clean CentOS 7 build environment.
 #
 
 FROM centos:centos7
 MAINTAINER ClusterHQ <contact@clusterhq.com>
 RUN ["yum", "groupinstall", "--assumeyes", "Development Tools"]
 RUN ["yum", "install", "--assumeyes", "epel-release"]
-RUN ["yum", "install", "--assumeyes", "git", "ruby-devel", "python-devel", "python-virtualenv", "python-pip"]
+RUN ["yum", "install", "--assumeyes", "git", "ruby-devel", "python-devel", "python-pip"]
 # Despite being a packaging tool, fpm isn't yet packaged for Fedora.
 # See https://github.com/jordansissel/fpm/issues/611
 RUN ["gem", "install", "fpm"]
-WORKDIR /tmp
-RUN ["pip", "install", "twisted", "characteristic"]
+# The pip from CentOS packaged virtualenv doesn't like dangling symlinks (such
+# as _trial_temp.locki). Install it from PyPI instead.
+RUN ["pip", "install", "twisted", "characteristic", "virtualenv"]
 VOLUME /flocker
 WORKDIR /
 ENTRYPOINT ["/flocker/admin/build-package-entrypoint", "--destination-path=/output"]
