Don't accept missing FLOCKER_BOX_VERSION in acceptance testing Vagrantfile.

--- a/admin/vagrant-acceptance-targets/fedora-20/Vagrantfile
+++ b/admin/vagrant-acceptance-targets/fedora-20/Vagrantfile
@@ -1,5 +1,5 @@
 # -*- mode: ruby -*-
-# vi: set ft=ruby :
+# vi: set ft=ruby sw=2 :
 
 # This requires Vagrant 1.6.2 or newer (earlier versions can't reliably
 # configure the Fedora 20 network stack).
@@ -10,9 +10,15 @@ VAGRANTFILE_API_VERSION = "2"
 
 ENV['VAGRANT_DEFAULT_PROVIDER'] = 'virtualbox'
 
+begin
+  BOX_VERSION = ENV.fetch('FLOCKER_BOX_VERSION')
+rescue KeyError
+  raise Vagrant::Errors::VagrantError.new, "Please specify FLOCKER_BOX_VERSION."
+end
+
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "clusterhq/flocker-tutorial"
-  config.vm.box_version = "= " + ENV.fetch('FLOCKER_BOX_VERSION', '0')
+  config.vm.box_version = "= " + BOX_VERSION
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
