--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -30,6 +30,7 @@ BuildRequires:  python-klein = 0.2.3
 BuildRequires:  openssh-clients
 # See https://github.com/ClusterHQ/flocker/issues/85
 BuildRequires:  docker-io >= 1.3.0
+BuildRequires:  python-libcloud == 0.16.0
 
 Requires:       python-setuptools >= 1.4
 Requires:       python-eliot == 0.4.0
