flocker.restapi.docs requires Sphinx environment.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands =
     sphinx-build -a -b spelling docs/ docs/_build/spelling
     sphinx-build -a -b html docs/ docs/_build/html
     sphinx-build -a -b linkcheck docs/ docs/_build/linkcheck
+    trial --rterror flocker.restapi.docs
 
 [testenv:admin]
 basepython = python2.7
