--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ basepython = python2.7
 basepython = python2.7
 deps = flake8
 changedir = {toxinidir}
-commands = flake8 --exclude=_version.py flocker
+commands = flake8 --exclude=_version.py,flocker/restapi/docs/hidden_code_block.py flocker
 
 [testenv:sphinx]
 basepython = python2.7
